# Lab1_PromCpp

./: README.md  initpr.txt  initpr2.txt
hw1_review/: CMakeLists.txt  Makefile
hw1_review/include/RAII/: File.hpp
hw1_review/libsrc/RAII/: CMakeLists.txt
hw1_review/libsrc/RAII/src/: File.cpp
hw1_review/projects/main_RAII/: CMakeLists.txt
hw1_review/projects/main_RAII/src/: main.cpp
hw1_review/testsuite/RAII/: app_test.py
hw1_review/testsuite/libsrc/RAII/src/: test.cpp
testsuite/RAII/: app_test.py
testsuite/libsrc/RAII/: CMakeLists.txt
